[gd_scene load_steps=3 format=3 uid="uid://cgopgvmgdnyhb"]

[ext_resource type="Script" path="res://menu.gd" id="1_p1vs3"]
[ext_resource type="FontFile" uid="uid://xip1iy6vet0d" path="res://VCR_OSD_MONO_1.001.ttf" id="1_pm24x"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p1vs3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_pm24x")
theme_override_font_sizes/font_size = 41
text = "Match-the-Cards"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 463.0
offset_top = 274.0
offset_right = -455.0
offset_bottom = -242.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pm24x")
theme_override_font_sizes/font_size = 23
text = "Rows"
horizontal_alignment = 1
vertical_alignment = 1

[node name="rowDropDownMenu" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pm24x")
theme_override_font_sizes/font_size = 23
text = "Columns"
horizontal_alignment = 1
vertical_alignment = 1

[node name="columnDropDownMenu" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pm24x")
theme_override_font_sizes/font_size = 23
text = "Start"

[connection signal="item_selected" from="VBoxContainer/rowDropDownMenu" to="." method="_on_row_drop_down_menu_item_selected"]
[connection signal="item_selected" from="VBoxContainer/columnDropDownMenu" to="." method="_on_column_drop_down_menu_item_selected"]
